<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:outlineProvider="bounds"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp"
        android:elevation="2dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/event_default"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparentDarkGrey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="title" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="2dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_place_black_24dp" />

                    <TextView
                        android:id="@+id/eventDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        tools:text="distance" />

                </LinearLayout>

                <TextView
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/accept"
                android:textSize="50sp"
                android:alpha="0"
                android:textColor="@color/grey"
                android:background="#F5F5F5"
                android:id="@+id/accept_indicator">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/deny"
                android:textSize="50sp"
                android:alpha="0"
                android:textColor="@color/grey"
                android:background="#F5F5F5"
                android:id="@+id/deny_indicator">
            </TextView>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>