<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardView_event"
    tools:context=".ui.event.DefaultEventFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/default_event_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:elevation="2dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="414dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/oss117" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/default_title_1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    tools:text="title" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="30dp"
                    android:text="@string/default_description_1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="description" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingRight="40dp"
                    android:paddingBottom="5dp"
                    android:text="@string/default_date_1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="date" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="30dp"
                    android:textColor="@color/black"
                    android:background="@color/white">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="16dp"
            android:src="@drawable/check"
            app:layout_anchorGravity="bottom|center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sharingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:backgroundTint="#47ECAA"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_share"
            app:backgroundTint="@color/white"
            app:layout_anchorGravity="bottom|right"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chat_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:clickable="true"
            android:layout_margin="16dp"
            android:src="@android:drawable/sym_action_chat"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>